--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.0.1",
     "cors": "^2.8.5",
+    "flatlist-react": "^1.5.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.1",
