--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.0.1",
     "cors": "^2.8.5",
     "flatlist-react": "^1.5.0",
+    "numericinput": "^1.0.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.1",
